k8s-manifests/staging/env-suffix-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
spec:
  template:
    spec:
      containers:
      - name: ecommerce-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
spec:
  template:
    spec:
      containers:
      - name: order-management
