k8s-manifests/staging/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-management
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-and-handling
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-support-team
spec:
  replicas: 1
