k8s-manifests/staging/virtualservice-gateway-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecommerce-ui
spec:
  gateways:
  - ecommerce-gateway
